syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "VelocipedeUtils.DataStorage.InMemoryService.Grpc";

package InMemoryService;

service InMemoryStorage {
  rpc Save (SaveRequest) returns (SaveResponse);
  rpc Search (SearchRequest) returns (SearchResponse);
  rpc Remove (RemoveRequest) returns (RemoveResponse);
  rpc Increment (IncrementRequest) returns (IncrementResponse);
}

message SaveRequest {
  string key = 1;
  string value = 2;
}

message SaveResponse {
  bool success = 1;
}

message SearchRequest {
  string key = 1;
}

message SearchResponse {
  string value = 1;
  bool found = 2;
}

message RemoveRequest {
  string key = 1;
}

message RemoveResponse {
  bool success = 1;
}

message IncrementRequest {
  string key = 1;
}

message IncrementResponse {
  google.protobuf.Int32Value value = 1;
  bool success = 2;
}
